# llama.cpp

./: .gitignore  AGENTS.md  Experiment-PP-Hot-Cache-Cold-Escape.md  README.md  START.md  _config.yml  bench-pp-hot-cache-compare.sh  coder  codex-bench.env  codex-run-bench  fpu_starter  gemma4  index.md  model_config.ini  moe-layer-perf-live.json  performance56.json  pp-bench-conversation-code.txt  qwen36  qwenExpertsProgramming.json  qwen_profile  start-bench-qwen3-coder-next  start-cli-qwen122b  start-server-learn
.firecrawl/: mtp-search.json  reddit-experts-first.md  reddit-onrva0s.html
bench-pp-hot-cache-results/: hot-cache-pp-reduce-off.md  hot-cache-pp-reduce-on.md  latest-budget-ab-pp512.txt  latest-budget-ab.txt  latest-budget-confirm-r3.txt  latest-budget-map.txt  latest-expertonly-joinbackend.txt  latest-expertonly.txt  (+7 more)
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-graph.cpp  llama-graph.h  llama-model.cpp  llama-model.h  llama-moe-hot-cache-graph.cpp  llama-moe-hot-cache-perf.cpp  llama-moe-hot-cache-perf.h  llama-moe-hot-cache.cpp  llama-moe-hot-cache.h  llama.cpp
src/models/: deepseek2.cpp  gemma4-hot-cache.cpp  gemma4.cpp  glm4-moe.cpp  mellum.cpp  models.h  openai-moe.cpp  qwen35moe-hot-cache.cpp  qwen35moe.cpp  qwen3next.cpp
src/moe-hot-cache/: llama-moe-hot-cache-adapter.cpp  llama-moe-hot-cache-adapter.h  llama-moe-hot-cache-branch-reduce.cpp  llama-moe-hot-cache-branch-reduce.h  llama-moe-hot-cache-budget.cpp  llama-moe-hot-cache-budget.h  llama-moe-hot-cache-builder.cpp  llama-moe-hot-cache-builder.h  llama-moe-hot-cache-common.h  llama-moe-hot-cache-ggml.cpp  llama-moe-hot-cache-ggml.h  llama-moe-hot-cache-graph.cpp  llama-moe-hot-cache-parser.cpp  llama-moe-hot-cache-parser.h  llama-moe-hot-cache-perf-json.cpp  llama-moe-hot-cache-perf-json.h  llama-moe-hot-cache-perf-nodes.cpp  llama-moe-hot-cache-perf-nodes.h  llama-moe-hot-cache-perf-reader.cpp  llama-moe-hot-cache-perf-reader.h  llama-moe-hot-cache-perf-state.cpp  llama-moe-hot-cache-perf-state.h  llama-moe-hot-cache-perf.cpp  llama-moe-hot-cache-perf.h  llama-moe-hot-cache-planner.cpp  llama-moe-hot-cache-planner.h  llama-moe-hot-cache-pp.cpp  llama-moe-hot-cache-pp.h  llama-moe-hot-cache-updater.cpp  llama-moe-hot-cache-updater.h  llama-moe-hot-cache-weighting.cpp  llama-moe-hot-cache-worklist.cpp  llama-moe-hot-cache-worklist.h  llama-moe-hot-cache.cpp  llama-moe-hot-cache.h
(+273 files in other folders)
